# ray-studio

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: AI-MANUAL.md
examples/: client_dna_example.yaml  python_integration.py
src/ray_studio/: cli.py
src/ray_studio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ray_studio/compositor/: __init__.py  effects.py  engine.py  layers.py  text.py
src/ray_studio/dna/: __init__.py  loader.py  schema.py
src/ray_studio/export/: __init__.py  exporter.py  formats.py  presets.py
src/ray_studio/figma/: __init__.py  cli.py  client.py  commands.py  config.py
src/ray_studio/generators/: __init__.py  base.py  fal.py
src/ray_studio/templates/: __init__.py  base.py  registry.py
templates/: product_showcase.yaml  promo.yaml  testimonial.yaml
tests/: test_integration.py  verify_compositor.py  verify_dna.py  verify_export.py  verify_figma.py  verify_generators.py  verify_templates.py
